--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Turret+Road:wght@200&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -64,13 +67,11 @@
   }
   
   body {
-	min-height: 100vh;
 	color: var(--color-text);
 	background: var(--color-background);
+	font-family: Montserrat, Turret Road;
 	transition: color 0.5s, background-color 0.5s;
 	line-height: 1.6;
-	font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-	  Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 	font-size: 15px;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
